--- a/view/adminhtml/templates/formulas/test.phtml
+++ b/view/adminhtml/templates/formulas/test.phtml
@@ -20,7 +20,7 @@
  * @author     Bento Vilas Boas <bento@licentia.pt>
  * @copyright  Copyright (c) Licentia - https://licentia.pt
  * @license    GNU General Public License V3
- * @modified   29/01/20, 15:22 GMT
+ * @modified   06/03/20, 15:03 GMT
  *
  */
 
@@ -104,6 +104,7 @@
             <div class="admin__field-control control">
                 <input value="<?= $block->escapeHtmlAttr($block->getData('form/formula')) ?>" name="formula" type="text"
                        class="required-entry required-entry _required input-text admin__control-text">
+                <label><?= __('Please make sure you only use variables and mathematical these symbols: + - * / ( )') ?></label>
             </div>
         </div>
         <div class="admin__field field ">
