--- a/view/adminhtml/templates/formulas/test.phtml
+++ b/view/adminhtml/templates/formulas/test.phtml
@@ -20,7 +20,7 @@
  * @author     Bento Vilas Boas <bento@licentia.pt>
  * @copyright  Copyright (c) Licentia - https://licentia.pt
  * @license    GNU General Public License V3
- * @modified   06/03/20, 15:03 GMT
+ * @modified   18/03/20, 05:48 GMT
  *
  */
 
@@ -85,7 +85,7 @@
 </style>
 <div class="content panda_autocomplete">
     <h1><?= /* @noEscape */
-        __('Formulas Tester') ?></h1>
+        __('Product Pricing Formula Tester') ?></h1>
     <form class="form" action="<?= $block->escapeHtmlAttr($block->getData('form/action')) ?>" method="post"
           id="edit_form">
         <?= $block->getBlockHtml('formkey') ?>
