--- a/view/adminhtml/templates/help/pricing.phtml
+++ b/view/adminhtml/templates/help/pricing.phtml
@@ -126,11 +126,11 @@
         </tr>
         <tr>
             <td>You can use IF in the formulas</td>
-            <td>{IF {p.price} > 100}
+            <td>{{IF {p.price} > 100}}
                 {p.price} * 0.9
-                {ELSE}
+                {{ELSE}}
                 {p.price} * 0.8
-                {/IF}
+                {{/IF}}
             </td>
         </tr>
         </tbody>
