--- a/view/frontend/templates/twofactor/auth.phtml
+++ b/view/frontend/templates/twofactor/auth.phtml
@@ -20,7 +20,7 @@
  * @author     Bento Vilas Boas <bento@licentia.pt>
  * @copyright  Copyright (c) Licentia - https://licentia.pt
  * @license    GNU General Public License V3
- * @modified   29/01/20, 15:22 GMT
+ * @modified   01/06/20, 15:57 GMT
  *
  */
 
@@ -62,7 +62,16 @@
                             ) ?></span>
                     </label>
                 </div>
-
+                <?php if ($block->getAllowRemember()): ?>
+                    <div class="field choice">
+                        <input type="checkbox" name="sms_remember_browser" id="sms_remember_browser">
+                        <label for="sms_remember_browser" class="label"> <span><?= /* @noEscape */
+                                __(
+                                    'Do not ask again for this browser for the next %1 days',$block->getDaysToRemember()
+                            ) ?></span>
+                        </label>
+                    </div>
+                <?php endif; ?>
             </fieldset>
             <div class="actions-toolbar">
                 <div class="primary">
