--- a/view/adminhtml/templates/twofactor/auth.phtml
+++ b/view/adminhtml/templates/twofactor/auth.phtml
@@ -20,7 +20,7 @@
  * @author     Bento Vilas Boas <bento@licentia.pt>
  * @copyright  Copyright (c) Licentia - https://licentia.pt
  * @license    GNU General Public License V3
- * @modified   03/06/20, 01:21 GMT
+ * @modified   03/06/20, 14:09 GMT
  *
  */
 
@@ -51,6 +51,10 @@
         display: block;
         float: left;
         width: 45%;
+    }
+
+    .menu-wrapper:before, body {
+        background-color: white;
     }
 
     .secondary {
