--- a/view/frontend/templates/twofactor/auth.phtml
+++ b/view/frontend/templates/twofactor/auth.phtml
@@ -20,7 +20,7 @@
  * @author     Bento Vilas Boas <bento@licentia.pt>
  * @copyright  Copyright (c) Licentia - https://licentia.pt
  * @license    GNU General Public License V3
- * @modified   01/06/20, 15:57 GMT
+ * @modified   03/06/20, 16:19 GMT
  *
  */
 
@@ -67,8 +67,9 @@
                         <input type="checkbox" name="sms_remember_browser" id="sms_remember_browser">
                         <label for="sms_remember_browser" class="label"> <span><?= /* @noEscape */
                                 __(
-                                    'Do not ask again for this browser for the next %1 days',$block->getDaysToRemember()
-                            ) ?></span>
+                                    'Do not ask again for this browser for the next %1 days',
+                                    $block->getDaysToRemember()
+                                ) ?></span>
                         </label>
                     </div>
                 <?php endif; ?>
