--- a/view/frontend/templates/twofactor/auth.phtml
+++ b/view/frontend/templates/twofactor/auth.phtml
@@ -20,7 +20,7 @@
  * @author     Bento Vilas Boas <bento@licentia.pt>
  * @copyright  Copyright (c) Licentia - https://licentia.pt
  * @license    GNU General Public License V3
- * @modified   03/06/20, 16:19 GMT
+ * @modified   03/06/20, 19:35 GMT
  *
  */
 
@@ -50,7 +50,7 @@
             <fieldset class="fieldset">
                 <?= $block->getBlockHtml('formkey') ?>
                 <legend class="legend"><span><?= /* @noEscape */
-                        __('Two Factor Authentication Required') ?></span>
+                        __('Two-Factor Authentication Required') ?></span>
                 </legend>
                 <br>
 
@@ -114,7 +114,7 @@
                 <?= /* @noEscape */
                 $block->getBlockHtml('formkey') ?>
                 <legend class="legend"><span><?= /* @noEscape */
-                        __('Two Factor Authentication Required') ?></span>
+                        __('Two-Factor Authentication Required') ?></span>
                 </legend>
                 <div class="field choice">
                     <label for="subscription" class="label"> <span><?= /* @noEscape */
