--- a/view/frontend/templates/twofactor/edit.phtml
+++ b/view/frontend/templates/twofactor/edit.phtml
@@ -1,3 +1,36 @@
+<?php
+/**
+ * Copyright (C) 2020 Licentia, Unipessoal LDA
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ *
+ * @title      Licentia Panda - Magento® Sales Automation Extension
+ * @package    Licentia
+ * @author     Bento Vilas Boas <bento@licentia.pt>
+ * @copyright  Copyright (c) Licentia - https://licentia.pt
+ * @license    GNU General Public License V3
+ * @modified   03/06/20, 19:31 GMT
+ *
+ */
+
+/** @var \Licentia\Equity\Block\EditCustomerForm $block */
+
+if (!$block->isTwoFactorEnabled()) {
+    return '';
+}
+?>
+
 <fieldset class="fieldset phone">
     <legend class="legend"><span><?= $this->escapeHtml(__('Two-Factor Authentication')) ?></span>
     </legend>
