--- a/view/frontend/templates/twofactor/edit.phtml
+++ b/view/frontend/templates/twofactor/edit.phtml
@@ -21,7 +21,9 @@ use \Licentia\Equity\Model\TwoFactor;
 
 /** @var \Licentia\Equity\Block\EditCustomerForm $block */
 
-if (!$block->isTwoFactorEnabled()) {
+if (!$block->isTwoFactorEnabled() ||
+    $block->getTwoFactorType() == 'email' || (
+        $block->getTwoFactorType() == 'sms' && !$block->isTwoFactorOptional())) {
     return '';
 }
 ?>
@@ -29,30 +31,34 @@ if (!$block->isTwoFactorEnabled()) {
 <fieldset class="fieldset phone">
     <legend class="legend"><span><?= $this->escapeHtml(__('Two-Factor Authentication')) ?></span>
     </legend>
-    <br>
-    <div class="field twofactor">
-        <label class="label"
-               for="panda_twofactor_enabled"><span><?= $this->escapeHtml(__('Enable Two-Factor Authentication?')) ?></span></label>
-        <div class="control">
-            <select name="panda_twofactor_enabled" id="panda_twofactor_enabled">
-                <option <?= $this->getCustomer()
-                                 ->getData(TwoFactor::ATTRIBUTE_PANDA_TWOFACTOR_ENABLED) == 0 ? ' selected ' : '' ?>
-                        value="0"><?= __('No') ?></option>
-                <option <?= $this->getCustomer()
-                                 ->getData(TwoFactor::ATTRIBUTE_PANDA_TWOFACTOR_ENABLED) == 1 ? ' selected ' : '' ?>
-                        value="1"><?= __('Yes') ?></option>
-            </select>
+    <?php if ($block->isTwoFactorOptional()): ?>
+        <br>
+        <div class="field twofactor">
+            <label class="label"
+                   for="panda_twofactor_enabled"><span><?= $this->escapeHtml(__('Enable Two-Factor Authentication?')) ?></span></label>
+            <div class="control">
+                <select name="panda_twofactor_enabled" id="panda_twofactor_enabled">
+                    <option <?= $this->getCustomer()
+                                     ->getData(TwoFactor::ATTRIBUTE_PANDA_TWOFACTOR_ENABLED) == 0 ? ' selected ' : '' ?>
+                            value="0"><?= __('No') ?></option>
+                    <option <?= $this->getCustomer()
+                                     ->getData(TwoFactor::ATTRIBUTE_PANDA_TWOFACTOR_ENABLED) == 1 ? ' selected ' : '' ?>
+                            value="1"><?= __('Yes') ?></option>
+                </select>
+            </div>
         </div>
-    </div>
+    <?php endif; ?>
     <br>
-    <div class="field phone">
-        <label class="label"
-               for="panda_twofactor_number"><span><?= $this->escapeHtml(__('Two-Factor Authentication Phone Number')) ?></span></label>
-        <div class="control">
-            <input type="text" name="panda_twofactor_number" id="panda_twofactor_number"
-                   value="<?= $this->escapeHtmlAttr($this->getCustomer()->getData('panda_twofactor_number')) ?>"
-                   title="<?= $this->escapeHtmlAttr(__('Two-Factor Authentication Phone Number')) ?>"
-                   class="input-text""/>
+    <?php if ($block->getTwoFactorType() == 'sms'): ?>
+        <div class="field phone">
+            <label class="label"
+                   for="panda_twofactor_number"><span><?= $this->escapeHtml(__('Two-Factor Authentication Phone Number')) ?></span></label>
+            <div class="control">
+                <input type="text" name="panda_twofactor_number" id="panda_twofactor_number"
+                       value="<?= $this->escapeHtmlAttr($this->getCustomer()->getData('panda_twofactor_number')) ?>"
+                       title="<?= $this->escapeHtmlAttr(__('Two-Factor Authentication Phone Number')) ?>"
+                       class="input-text""/>
+            </div>
         </div>
-    </div>
+    <?php endif; ?>
 </fieldset>
