--- a/view/adminhtml/templates/twofactor/auth.phtml
+++ b/view/adminhtml/templates/twofactor/auth.phtml
@@ -22,7 +22,8 @@
 ?>
 <style type="text/css">
     .container {
-        width: 450px;
+        width: 98%;
+        max-width: 450px;
         height: 35vh;
         margin: 20px auto;
     }
