--- a/view/adminhtml/email/twofactor.html
+++ b/view/adminhtml/email/twofactor.html
@@ -18,7 +18,7 @@
 
 <!--@subject {{trans 'Validate your login for %store' store="$storeName"}} @--><!--@vars {
 "var code":"Auth Code",
-"var username":"Admin User Name",
+"var username":"Admin Username",
 "var storeName":"Store Name",
 "var storeUrl":"Store Url"
 } @-->
